[gd_scene load_steps=8 format=3 uid="uid://bnvisxcx45eml"]

[ext_resource type="Script" uid="uid://detappavtqek7" path="res://ui/main_menu/main_menu.gd" id="1_3c04x"]
[ext_resource type="Texture2D" uid="uid://dpc8rm4pqowh3" path="res://resources/ui_components/ui_page_bg.png" id="1_i5wg5"]
[ext_resource type="Texture2D" uid="uid://c41csmiboigsk" path="res://resources/ui_components/title_160_80.png" id="2_3c04x"]
[ext_resource type="Texture2D" uid="uid://cs06phbh864nt" path="res://resources/ui_components/menu_button.png" id="3_joh67"]
[ext_resource type="Script" uid="uid://dgi6lolw2kg32" path="res://ui/hover_button.gd" id="4_u184e"]
[ext_resource type="AudioStream" uid="uid://m651cc6hqoag" path="res://resources/audio/track2/backing.ogg" id="6_joh67"]
[ext_resource type="PackedScene" uid="uid://cumjitqfsfau0" path="res://ui/settings_menu/settings_menu.tscn" id="7_u184e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c04x")

[node name="bg_color" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i5wg5")

[node name="title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 16.0
offset_right = 318.0
offset_bottom = 325.0
grow_horizontal = 2
texture = ExtResource("2_3c04x")

[node name="Start Button" type="TextureButton" parent="."]
self_modulate = Color(0.654902, 0.941176, 0.439216, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 48.0
offset_right = 128.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("3_joh67")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_u184e")

[node name="Label" type="Label" parent="Start Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings Button" type="TextureButton" parent="."]
self_modulate = Color(0.45098, 0.937255, 0.968627, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 122.0
offset_right = 128.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("3_joh67")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_u184e")

[node name="Label" type="Label" parent="Settings Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Button" type="TextureButton" parent="."]
self_modulate = Color(1, 0.803922, 0.458824, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 196.0
offset_right = 128.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("3_joh67")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_u184e")

[node name="Label" type="Label" parent="Exit Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_joh67")
autoplay = true

[node name="SettingsMenu" parent="." instance=ExtResource("7_u184e")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="Start Button" to="Start Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Start Button" to="Start Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="Settings Button" to="Settings Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Settings Button" to="Settings Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="Exit Button" to="Exit Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Exit Button" to="Exit Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Exit Button" to="." method="_on_exit_button_pressed"]
